--- a/_includes/partials/oni/mergeb64.liquid
+++ b/_includes/partials/oni/mergeb64.liquid
@@ -1,9 +1,9 @@
-<section id="mergeb64" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#mergeb64Collapse" role="button" 
-                aria-expanded="false" aria-controls="mergeb64Collapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Merge Base64
                 </h2>
@@ -16,12 +16,12 @@
                 Merges multiple Base64 strings by selecting the most frequent character at each position.
             </p>
         </div>
-        <div class="collapse" id="mergeb64Collapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Merge Base64</span>
                     <div class="card-body text-left">
-                        <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">mergeb64(...args)</code>
+                        <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">{{ filename }}(...args)</code>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
