--- a/_includes/partials/misc/covenant.liquid
+++ b/_includes/partials/misc/covenant.liquid
@@ -1,9 +1,9 @@
-<section id="covenant" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#covenantCollapse" role="button" 
-                aria-expanded="true" aria-controls="covenantCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="true" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Covenant glyphs
                 </h2>
@@ -19,7 +19,7 @@
                  There is more information available on the <a href="https://www.halopedia.org/Sangheili_(language)" class="text-convrtr">Sangheili language</a> Halopedia page. 
             </p>
         </div>
-        <div class="collapse show" id="covenantCollapse">
+        <div class="collapse show" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Covenant glyphs</span>
@@ -77,8 +77,8 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="covenantResults" class="data-to-copy active"></div>
-                        <div id="covenantImageResults" class="covenant"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}ImageResults" class="covenant"></div>
                     </div>
                 </div>
             </div>
