--- a/_includes/partials/ciphers/beaufort.liquid
+++ b/_includes/partials/ciphers/beaufort.liquid
@@ -1,9 +1,9 @@
-<section id="beaufort" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#beaufortCollapse" role="button" 
-                aria-expanded="false" aria-controls="beaufortCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Beaufort cipher
                 </h2>
@@ -29,22 +29,22 @@
                 - then loop back and start from the first letter in the key again. There is more information available on the <a href="https://en.wikipedia.org/wiki/Beaufort_cipher" class="text-convrtr">Beaufort cipher</a> Wikipedia page. 
             </p>
         </div>
-        <div class="collapse" id="beaufortCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Beaufort cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: SENTENCE → TEST [key] → BAFAPRQP" title="Beaufort encrypt/decrypt string" rows="6" id="beaufortText" class="form-control beaufort-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: SENTENCE → TEST [key] → BAFAPRQP" title="Beaufort encrypt/decrypt string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="beaufortKeyLabel" for="beaufortKey"><span class="visually-hidden">Beaufort </span>Key</label>
-                                        <input type="text" class="form-control" id="beaufortKey" autocomplete="off">
-                                        <button class="btn btn-convrtr" type="button" id="beaufortEncrypt">Encrypt</button>
-                                        <button class="btn btn-outline-convrtr" type="button" id="beaufortDecrypt">Decrypt</button>
+                                        <label class="input-group-text" id="{{ filename }}KeyLabel" for="{{ filename }}Key"><span class="visually-hidden">Beaufort </span>Key</label>
+                                        <input type="text" class="form-control" id="{{ filename }}Key" autocomplete="off">
+                                        <button class="btn btn-convrtr" type="button" id="{{ filename }}Encrypt">Encrypt</button>
+                                        <button class="btn btn-outline-convrtr" type="button" id="{{ filename }}Decrypt">Decrypt</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill justify-content-end">
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="beaufortResults" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
