--- a/_includes/partials/ciphers/atbash.liquid
+++ b/_includes/partials/ciphers/atbash.liquid
@@ -5,7 +5,7 @@
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
                 aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
-                    Atbash cipher
+                    {{ filename | upperFirst }} cipher
                 </h2>
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
