--- a/_includes/partials/ciphers/keyword.liquid
+++ b/_includes/partials/ciphers/keyword.liquid
@@ -1,11 +1,11 @@
-<section id="keyword" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#keywordCollapse" role="button" 
-                aria-expanded="false" aria-controls="keywordCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
-                    Keyword cipher
+                    {{ filename | upperFirst }} cipher
                 </h2>
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
@@ -18,23 +18,23 @@
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">TBST SBLTBLDB</code> 
             </p>
         </div>
-        <div class="collapse" id="keywordCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
-                    <span class="card-label visually-hidden">Keyword cipher</span>
+                    <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                     <div class="card-body text-center">
                         <textarea placeholder="Example: TEST SENTENCE → WORD [key] → TBST SBLTBLDB
-                        " title="Keyword encrypt/decrypt string" rows="6" id="keywordText" class="form-control keyword-cipher" autocomplete="off"></textarea>
+                        " title="Keyword encrypt/decrypt string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="keywordKeyLabel" for="keywordKey"><span class="visually-hidden">Keyword </span>Key</label>
-                                        <input type="text" class="form-control" id="keywordKey" autocomplete="off">
-                                        <button class="btn btn-convrtr" type="button" id="keywordEncrypt">Encrypt</button>
-                                        <button class="btn btn-outline-convrtr" type="button" id="keywordDecrypt">Decrypt</button>
+                                        <label class="input-group-text" id="{{ filename }}KeyLabel" for="{{ filename }}Key"><span class="visually-hidden">{{ filename | upperFirst }} </span>Key</label>
+                                        <input type="text" class="form-control" id="{{ filename }}Key" autocomplete="off">
+                                        <button class="btn btn-convrtr" type="button" id="{{ filename }}Encrypt">Encrypt</button>
+                                        <button class="btn btn-outline-convrtr" type="button" id="{{ filename }}Decrypt">Decrypt</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
@@ -42,7 +42,7 @@
                                         <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                             <div class="form-check form-switch text-start">
                                                 <input class="form-check-input" type="checkbox" role="switch" id="chainKw" aria-checked="false">
-                                                <label class="form-check-label" for="chainKw">Chain <span class="visually-hidden">keyword </span>commands</label>
+                                                <label class="form-check-label" for="chainKw">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                             </div>
                                         </div>
                                         <div class="col d-flex flex-fill justify-content-end">
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="keywordResults" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
