--- a/_includes/partials/ciphers/substitution.liquid
+++ b/_includes/partials/ciphers/substitution.liquid
@@ -1,11 +1,11 @@
-<section id="sub" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#subCollapse" role="button" 
-                aria-expanded="false" aria-controls="subCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
-                    Substitution cipher
+                    {{ filename | upperFirst }} cipher
                 </h2>
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
@@ -55,22 +55,22 @@
                 </code> &ndash; There is more information available on the <a href="https://en.wikipedia.org/wiki/Substitution_cipher" class="text-convrtr">Substitution cipher</a> Wikipedia page. 
             </p>
         </div>
-        <div class="collapse" id="subCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
-                    <span class="card-label visually-hidden">Substitution cipher</span>
+                    <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: SENTENCE → TEST [key] → QBLRBLSB" title="Substitution string" rows="6" id="subText" class="form-control sub-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: SENTENCE → TEST [key] → QBLRBLSB" title="{{ filename | upperFirst }} string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="substitution-group" for="subKey"><span class="visually-hidden">Substitution </span>Key</label>
-                                        <input type="text" class="form-control" id="subKey" autocomplete="off">
-                                        <button class="btn btn-convrtr" type="button" id="subEncrypt">Encrypt</button>
-                                        {% comment %}<button class="btn btn-outline-convrtr" type="button" id="subDecrypt" title="Decryption is currently unavailable">Decrypt</button>{% endcomment %}
+                                        <label class="input-group-text" id="{{ filename }}-group" for="{{ filename }}Key"><span class="visually-hidden">{{ filename | upperFirst }} </span>Key</label>
+                                        <input type="text" class="form-control" id="{{ filename }}Key" autocomplete="off">
+                                        <button class="btn btn-convrtr" type="button" id="{{ filename }}Encrypt">Encrypt</button>
+                                        {% comment %}<button class="btn btn-outline-convrtr" type="button" id="{{ filename }}Decrypt" title="Decryption is currently unavailable">Decrypt</button>{% endcomment %}
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
@@ -78,7 +78,7 @@
                                         <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                             <div class="form-check form-switch text-start">
                                                 <input class="form-check-input" type="checkbox" role="switch" id="chainSubs" aria-checked="false">
-                                                <label class="form-check-label" for="chainSubs">Chain <span class="visually-hidden">substitution </span>commands</label>
+                                                <label class="form-check-label" for="chainSubs">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                             </div>
                                         </div>
                                         <div class="col d-flex flex-fill justify-content-end">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="subResults" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
