Added additional tool to strip all whitespace

--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -32,6 +32,7 @@
                                         <label class="input-group-text" for="{{ filename }}Select">Delimiter</label>
                                         <select class="form-select" id="{{ filename }}Select" autocomplete="off">
                                             <option value="stripspaces" selected="">Strip spaces</option>
+                                            <option value="stripallwhitespace">Strip all whitespace</option>
                                             <option value="reverse">Reverse</option>
                                             <option value="uppercase">Uppercase</option>
                                             <option value="lowercase">Lowercase</option>
