Add default value to hex shift

--- a/_includes/partials/hex/shifthex.liquid
+++ b/_includes/partials/hex/shifthex.liquid
@@ -32,7 +32,7 @@
                                 <div class="col col-12 col-md-auto me-2 mb-2">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="{{ filename }}ValueLabel" for="{{ filename }}Value"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
-                                        <input type="number" class="form-control" id="{{ filename }}Value" autocomplete="off">
+                                        <input type="number" class="form-control" id="{{ filename }}Value" autocomplete="off" value="1">
                                         <button class="btn btn-convrtr" type="button" id="{{ filename }}Decode">Shift</button>
                                     </div>
                                 </div>
