--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -60,6 +60,12 @@
                                                 <label class="form-check-label" for="chainCommands">Chain commands</label>
                                             </div>
                                         </div>
+                                        <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
+                                            <div class="form-check form-switch text-start">
+                                                <input class="form-check-input" type="checkbox" role="switch" id="preserveWhitespace" aria-checked="false">
+                                                <label class="form-check-label" for="preserveWhitespace">Preserve spaces</label>
+                                            </div>
+                                        </div>
                                         <div class="col d-flex flex-fill justify-content-end">
                                             {% include "components/select-copy-dl" %}
                                         </div>
